syntax = "proto3";

package auth;

option go_package = "../gateway/src/proto";

service Auth {
  rpc Login (AuthRequest) returns (AuthResponse) {}
  rpc Revoke (RevokeRequest) returns (RevokeResponse) {}
}

message AuthRequest {
  string email = 1;
}

message AuthResponse {
  string token = 1;
}

message RevokeRequest {
  string token = 1;
}

message RevokeResponse {}